# NCUMA-DS-mid

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
data/: data_2_label.csv  data_3_label.csv
data/minibot/: data_1.bag  data_10.bag  data_11.bag  data_1_label.csv  data_2.bag  data_2_label.csv  data_3.bag  data_3_label.csv  data_4_label.csv  data_5_label.csv  data_6_label.csv
launch/: main.launch
model/: adaboost_model.npz
model/minibot/: adaboost_model.npz  scaler.npz  sensor_model.npz
model/turtlebot/: sensor_model.npz
rviz/: rviz.rviz
scripts/: Segment.py  labeling.py  main.py  training.py
scripts/utils/: Adaboost.py  BayesFilter.py  Feature.py  Loader.py  Segment.py
