<?xml version="1.0"?>
<package format="2">
  <name>ds_mid</name>
  <version>0.0.0</version>
  <description>The DS_mid package</description>

  <maintainer email="myax@todo.todo">myax</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

</package>
